@@ -1,3 +1,2 @@
-* seqGDS2VCF, output bgzip
 * seqBCF2GDS
 * seqSlidingWindow
